tests/api/reference/negative/04-late-layout-local.asm
late_layout {
    let value = 1
    emit.u8(value)
}
